# on-fly-web-page-generation

./: .editorconfig  .eslintrc.js  .gitignore  .prettierignore  README.md  app.vue  error.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
assets/default-pages/: index.pug
assets/styles/: _colors.scss  _variables.scss
components/page/: Builder.vue  Container.vue  Flex.vue  Heading.vue  Link.vue  Text.vue
hooks/: css-units.ts
layouts/: deafult.vue  default.vue
lib/: .gitignore  Cargo.toml  README.md
lib/src/: lib.rs
lib/wasm/: on_the_fly_web_page_generation_lib.d.ts  on_the_fly_web_page_generation_lib.js  on_the_fly_web_page_generation_lib_bg.js  on_the_fly_web_page_generation_lib_bg.wasm  on_the_fly_web_page_generation_lib_bg.wasm.d.ts  package.json
pages/: index.vue
