[package]
name = "on-the-fly-web-page-generation-lib"
version = "0.0.1"
authors = ["Ivan <contact@mixero.dev>"]
edition = "2021"
description = "On The Fly Web Page Generation project library"
readme = "README.md"
homepage = "https://github.com/Mixerou/on-the-fly-web-page-generation/tree/main/lib"
repository = "https://github.com/Mixerou/on-the-fly-web-page-generation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.86"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
